<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lbapp.Koordynator.Prognoza.SzczegolyAdresuPrognozyActivity"
    tools:showIn="@layout/koordynator_prognoza_szczegoly_adresu_activity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="40dp">


        <TextView
            android:id="@+id/FirmaLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/UwagiLabel"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/firma"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvFirma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/UwagiLabel"
            android:layout_below="@+id/FirmaLabel"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textMultiLine"
            android:text="@string/nazwa_firmy"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UwagiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvFirma"
            android:layout_marginStart="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/uwagi"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvUwagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/UwagiLabel"
            android:layout_below="@+id/UwagiLabel"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/opis"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/KodDoDomofonuLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/UwagiLabel"
            android:layout_below="@+id/tvUwagi"
            android:fontFamily="sans-serif-condensed"
            android:text="Kod do domofonu:"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvKodDoDomofonu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/KodDoDomofonuLabel"
            android:layout_alignStart="@+id/KodDoDomofonuLabel"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="170dp"
            android:fontFamily="sans-serif-condensed"
            android:inputType="textMultiLine"
            android:text="1kl. 1234"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


    </RelativeLayout>

</androidx.core.widget.NestedScrollView>


