<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.lbapp.Koordynator.KoordynacjaTrasKurierskich.SzczegolyAdresuKoordynatorAcitivty">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <TextView
                android:id="@+id/tvDzielnica"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="20dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:text="@string/dzielnica"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvGodzina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="end"
                android:text="@string/godzina"
                android:textColor="@android:color/white"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/tvAdres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDzielnica"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="45dp"
                android:drawableStart="?android:attr/actionModeCloseDrawable"
                android:text="@string/adresObject"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="44sp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <include
        layout="@layout/koordynator_administracja_tras_kurierskich_trasa_szczegoly_adresu_content"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:onClick="onMapaClicked"
        android:scaleType="center"
        app:backgroundTint="@android:color/holo_green_dark"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|start"
        app:srcCompat="@android:drawable/ic_dialog_map"
        app:useCompatPadding="true" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
